# WCMS

./: .env.docker  .flake8  .gitignore  AI_CONTEXT.md  API.md  CHANGELOG.md  CLAUDE.md  CLEANUP_SUMMARY.md  DEVELOP.md  Dockerfile.server  GUIDE.md  LICENSE  PROJECT_CLEANUP_PLAN.md  README.md  REFACTORING_BUG_FIX_REPORT.md  STATUS.md  TESTING.md  VERSION  code_quality.py  docker-compose.yml  docker-entrypoint.sh  manage.py  plan.md  pyproject.toml  test_all.py  test_integration.py
.github/: copilot-instructions.md  dependabot.yml  zap-rules.tsv
.github/workflows/: build_client.yml  codeql.yml  deploy-api.yml  security_scan.yml  zap.yml
api/: .env.example  package-lock.json  package.json
api/src/: index.ts
api/src/middleware/: auth.ts
api/src/routes/: admin.ts  client.ts  commands.ts  install.ts  pcs.ts  rooms.ts
api/src/scripts/: init-db.ts
api/src/tests/: admin.test.ts  client.test.ts  commands.test.ts  pcs.test.ts  setup.ts
archive/: README.md
archive/code/: test_archive_complete.py  test_server.py
archive/docs/: API.md  COMMAND_IMPLEMENTATION.md  GUIDE_v2.0_legacy.md  IMPLEMENTATION_SUMMARY.md  TESTING.md  TESTING_GUIDE.md  TEST_REPORT.md
archive/tests/: test_bulk_commands.py  test_commands.py  test_integration.py
client/: QUICK_FIX.md  build.spec  collector.py  config.py  executor.py  main.py  pyproject.toml  reporter.py  requirements.txt  service.py  test_api.py  test_client.py  updater.py  utils.py
client/commands/: __init__.py  change_password.py  create_user.py  delete_user.py  download.py  execute_cmd.py  install.py  kill_process.py  restart.py  show_message.py  shutdown.py  uninstall.py
client/data/: system_processes.json
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CLIENT_AUTO_UPDATE.md  DOCKER_CLIENT_SETUP.md  GETTING_STARTED.md  GIT_COMMIT_GUIDE.md  INDEX.md  PRODUCTION.md  QUICK_REFERENCE.md  README.md  REFACTORING.md  REFACTORING_STATUS.md  SECURITY.md  SECURITY_FINDINGS.md  plan.md
frontend/: package-lock.json  package.json  svelte.config.js  vite.config.js
frontend/src/: app.html
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/rooms/: +page.svelte
frontend/src/routes/seats/: +page.svelte
frontend/src/routes/tokens/: +page.svelte
frontend/src/routes/versions/: +page.svelte
scripts/: backup-windows.ps1  clean_db_duplicates.sql  integration_test.py  restore-windows.ps1
server/: CLEAN_DUPLICATES.md  VERSION  app.py  clean_duplicates.py  clean_duplicates.sql  config.py  create_admin.py  create_seats.py  init_db.sh  pyproject.toml  requirements.txt  setup.sh  test_web_access.py
server/api/: __init__.py  admin.py  client.py  install.py
server/migrations/: schema.sql
server/models/: __init__.py  admin.py  command.py  pc.py  registration.py
server/services/: __init__.py  command_service.py  pc_service.py
server/static/css/: base.css  components.css  index.css
server/static/js/: commands.js  modal.js  pc-grid.js
server/templates/: about.html  account_manager.html  base.html  client_versions.html  command_test.html  error.html  index.html  layout_editor.html  login.html  pc_detail.html  process_history.html  registration_tokens.html  room_manager.html  server_log.html  system_status.html
server/utils/: __init__.py  auth.py  database.py  validators.py
tests/: DOCKER_TEST_GUIDE.md  __init__.py  conftest.py  docker_integration_test.py  docker_test.py
tests/client/: test_client.py  test_utils.py
tests/server/: test_api.py  test_api_client_auth.py  test_api_heartbeat.py  test_api_registration.py  test_complete.py  test_integration.py  test_models.py  test_models_registration.py
tests/server/archive/: test_complete.py  test_integration.py
