# WCMS Meta Project Configuration
# Server와 Client의 모든 의존성을 포함합니다.
# 단일 가상 환경에서 모든 테스트를 수행할 수 있습니다.

[project]
name = "wcms"
version = "0.8.6"
description = "WCMS - 실습실 PC 원격 관리 및 모니터링 시스템"
readme = "README.md"
license = "MIT"
authors = [
    {name = "WCMS Contributors"}
]
requires-python = ">=3.9"

# Server와 Client의 모든 의존성을 포함
dependencies = [
    # 공통 의존성
    "requests>=2.32.5",

    # Server 의존성
    "flask>=2.3.0",
    "flask-cors>=4.0.0",
    "flask-socketio>=5.3.0",
    "flask-session>=0.6.0",
    "bcrypt>=4.0.0",
    "python-socketio>=5.9.0",
    "gunicorn>=21.2.0",
    "gevent>=23.9.1",
    "cachelib>=0.9.0",

    # Client 의존성 (Windows 환경에서만 설치됨)
    "psutil>=7.1.3",
    "wmi>=1.5.1;platform_system=='Windows'",
    "pywin32>=306;platform_system=='Windows'",

    # 테스트 의존성 (루트 가상환경에서 테스트 실행)
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
# 개발/테스트 의존성
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "isort>=5.12.0",
]

# 클라이언트 빌드 의존성
build = [
    "pyinstaller>=6.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server", "client"]

# UV 설정 (루트에서 단일 venv 사용)
[tool.uv]
# dev-dependencies는 deprecated됨 (dependency-groups 사용)
# 대신 pyproject.toml의 optional-dependencies 사용

[tool.uv.sources]
# 로컬 프로젝트 참조 (필요시)
# wcms-server = { path = "server", editable = true }
# wcms-client = { path = "client", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
# archive 폴더 제외
norecursedirs = ["archive", ".git", "__pycache__", "*.egg-info"]
addopts = [
    "-v",
    "--tb=short",
]
